<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/label_spinner_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="@dimen/field_label_text_size"
        android:layout_marginStart="@dimen/field_padding"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_product"
        android:spinnerMode="dialog"
        android:layout_height="@dimen/field_height"
        android:layout_width="match_parent"
        tools:listitem="@layout/product_item"
        app:layout_constraintTop_toBottomOf="@id/label_spinner_product" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_lot_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_product"
        app:layout_constraintEnd_toStartOf="@+id/button_last_lot"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_lot_number"
            android:layout_height="@dimen/field_height"
            android:layout_width="match_parent"
            android:hint="@string/lot_number"
            android:textSize="@dimen/field_text_size"
            android:textAllCaps="true"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/button_last_lot"
        android:src="@drawable/ic_history"
        android:layout_width="@dimen/field_height"
        android:layout_height="@dimen/field_height"
        android:tintMode="multiply"
        android:tint="@color/iconAction"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/fill_last_lot_number"
        android:layout_marginTop="@dimen/field_spacing_extra"
        app:layout_constraintTop_toBottomOf="@id/spinner_product"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintTop_toBottomOf="@id/layout_lot_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_count"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:hint="@string/quantity"
            android:textSize="@dimen/field_text_size"
            android:inputType="number"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/actionDanger"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintWidth_max="@dimen/max_button_width"
        app:layout_constraintTop_toBottomOf="@id/layout_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save" />

    <Button
        android:id="@id/button_save"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="@dimen/field_spacing"
        app:layout_constraintWidth_max="@dimen/max_button_width"
        app:layout_constraintTop_toBottomOf="@id/layout_count"
        app:layout_constraintStart_toEndOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
