<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/search_label_showing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_info_text_size"
            android:text="@string/search_label_start"
            android:textColor="@color/textSecondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/search_label_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_info_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_label_showing" />

        <TextView
            android:id="@+id/search_label_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/search_info_text_size"
            android:text="@string/search_label_middle_plural"
            android:textColor="@color/textSecondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_label_matches" />

        <TextView
            android:id="@+id/search_label_total"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/search_info_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_label_middle"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button_clear_search"
            android:layout_height="@dimen/field_height"
            android:layout_width="wrap_content"
            android:text="@string/clear_search"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
